--- a/style.css
+++ b/style.css
@@ -37,3 +37,12 @@ li {
   margin: 0;
   padding: 0;
 }
+
+.heading {
+  margin: 0;
+  padding: 0;
+}
+.weather-wrapper {
+  max-width: 600px;
+  margin: 30px;
+}
