--- a/style.css
+++ b/style.css
@@ -79,13 +79,12 @@ li {
 .weather-forecast {
   margin-top: 20px;
   text-align: center;
-  color: whitesmoke;
-  font-style: bold;
 }
 
 .weather-forecast-date {
   font-size: 16px;
   opacity: 0.5;
+  color: black;
 }
 
 .weather-forecast-temperature-min {
@@ -94,4 +93,8 @@ li {
 
 .weather-forecast-temperatures {
   font-size: 13px;
+}
+
+.weather-forecast-temperature-max {
+  opacity: 0.5;
 }
