--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ li {
 
 .weather-forecast-date {
   font-size: 16px;
-  opacity: 0.5;
-  color: black;
+  opacity: 0.9;
+  color: whitesmoke;
 }
 
 .weather-forecast-temperature-min {
@@ -96,5 +96,5 @@ li {
 }
 
 .weather-forecast-temperature-max {
-  opacity: 0.5;
+  opacity: 0.3;
 }
