--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -9,6 +9,8 @@ h1 {
   line-height: 28px;
   margin-bottom: 0;
   font-display: capitalize;
+  padding: 1px;
+  font-weight: bold;
 }
 
 ul {
@@ -19,7 +21,7 @@ ul {
 li {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 4px;
 
   color: whitesmoke;
   font-size: 18px;
@@ -52,7 +54,7 @@ li {
 
 .weather-temperature strong {
   color: whitesmoke;
-  font-size: 64px;
+  font-size: 60px;
   line-height: 1;
   font-weight: 400;
 }
