Updated weather-forecast-temperatures font-size, font-weight and color

--- a/style.css
+++ b/style.css
@@ -94,7 +94,9 @@ li {
 }
 
 .weather-forecast-temperatures {
-  font-size: 13px;
+  font-size: 15px;
+  color: whitesmoke;
+  font-weight: bold;
 }
 
 .weather-forecast-temperature-max {
